--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/L.jpg" rel="icon">
+  <link href="img/L.jpg" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -95,7 +95,7 @@
                       <p><span class="title-s">Name: </span> <span>Lakhiwe Liwani</span></p>
                       <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
                       <p><span class="title-s">Email: </span> <span>lakhiweliwani@gmail</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(068)-5774-456</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(067)-0836-727</span></p>
                     </div>
                   </div>
                 </div>
@@ -373,7 +373,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> W628 Pani Street Site B Khayelitsha 7784</li>
-                      <li><span class="ion-ios-telephone"></span> (068) 5774-456/(073) 2043-468</li>
+                      <li><span class="ion-ios-telephone"></span> (067) 0836-727/(064) 8381-585</li>
                       <li><span class="ion-email"></span> lakhiweliwani@gmail.com</li>
                     </ul>
                   </div>
